# daml-lint

./: .gitignore  Cargo.toml  LICENSE  PUBLIC_AUDITS.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: cla.yml
src/: detector.rs  ir.rs  main.rs  parser.rs  reporter.rs
src/detectors/: archive_before_execute.rs  mod.rs  positive_amount.rs  unguarded_division.rs
